feat: Add footer, reviews system, compare feature, and UI improvements
- Add footer to home, game-page, and account-detail pages
- Add reviews system with moderation
- Add product comparison feature
- Remove back button that causes navigation errors
- Improve admin dashboard with larger, more beautiful chart
- Add WebConfig for encoding support